--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./styles.css">
+        <script src="./scripts/formActions.js"></script>
         <title>MatchyMatching - Encuentra tu Match</title>
     </head>
     <body>
@@ -32,20 +34,18 @@
                     <fieldset>
                         <legend>¿En qué estás interesadx?</legend>
                         <div class="checkbox-group">
-                            <label for="interest">Hombre</label>
-                            <input type="checkbox" name="interest" value="men">
-
-                            <label for="interest">Mujer</label>
-                            <input type="checkbox" name="interest" value="women">
+                            <label for="interest"><input type="checkbox" name="interest" value="men">Hombres</label>
+                           
+                            <label for="interest"><input type="checkbox" name="interest" value="women">Mujeres</label>
                         </div>
                     </fieldset>
 
                     <label for="nationality">Nacionalidad de tu otra mitad</label>
-                    <select name="nationality" id="nacionality">
-                        <option value="" disabled selected>Selecciona la Navionalidad de tu otra mitad</option>
+                    <select name="nationality" id="nationality">
+                        <option value="" disabled selected>Selecciona la Nacionalidad de tu otra mitad</option>
                     </select>
 
-                    <button type="submit" class="button">Voy a tener suerte ⊹₊⟡⋆ ͙͘͡★</button>
+                    <button type="submit" class="button">Voy a tener suerte ͙͘͡★</button>
                 </form>
             </div>
         </div>
