--- a/its-a-match.html
+++ b/its-a-match.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="./scripts/matchActions.js"></script>
         <link rel="stylesheet" href="./styles.css">
         <title>MatchyMatchy - It's a Match</title>
     </head>
     <body>
         <div class="match container">
-            <h1>It's a Match!! ˗ˏˋ ★ ˎˊ˗</h1>
+            <h1>It's a Match!! ˗ˏˋ★ˎˊ˗</h1>
             <header>
-                <img src="./imgs/img1.png" alt="Match photo">
+                <img id="image" src="./imgs/img1.png" alt="Match photo">
                 <div class="match-name">
                     <p id="name">Kerstein</p>
                     <p id="age">20</p>
@@ -19,21 +20,21 @@
 
             <div class="match-info">
                 <div class="demo-info">
-                    <p id="gender"><strong>Género:</strong>Mujer</p>
-                    <p id="dob"><strong>Fecha de nacimiento</strong>07-03-2005</p>
+                    <p id="gender"><strong>Género: </strong>Mujer</p>
+                    <p id="dob"><strong>Fecha de nacimiento: </strong>07-03-2005</p>
                 </div>
 
                 <div class="location">
-                    <p id="addres"><strong>Dirección</strong>-</p>
-                    <p id="city"><strong>Ciudad:</strong>Temuco</p>
-                    <p id="state"><strong>Estado:</strong>-</p>
-                    <p id="country"><strong>País:</strong>Chile</p>
+                    <p id="addres"><strong>Dirección: </strong>-</p>
+                    <p id="city"><strong>Ciudad: </strong>Temuco</p>
+                    <p id="state"><strong>Estado: </strong>-</p>
+                    <p id="country"><strong>País: </strong>Chile</p>
                 </div>
 
                 <div class="contact">
-                    <p id="email"><strong>Correo:</strong>kerr@gmail.com</p>
-                    <p id="phone"><strong>Teléfono:</strong>56-9-1234-5678</p>
-                    <p id="cellphone"><strong>Celular:</strong>56-9-1234-5678</p>
+                    <p id="email"><strong>Correo: </strong>kerr@gmail.com</p>
+                    <p id="phone"><strong>Teléfono: </strong>56-9-1234-5678</p>
+                    <p id="cellphone"><strong>Celular: </strong>56-9-1234-5678</p>
                 </div>
             </div>
         </div>
